grammer.txt
http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1548.pdf
Annex A を参考に作成

program: <expression> ";" program
program: ε

<expression>:
  <assignment_expression>

<assignment_expression>:
  <equality_expression>
  <equality_expression> "=" <assignment_expression>

<equality_expression>:
  <additive_expression>
  <equality_expression> "==" <additive_expression>
  <equality_expression> "!=" <additive_expression>

<additive_expression>:
  <multiplicative_expression>
  <additive_expression> "+" <multiplicative_expression>
  <additive_expression> "-" <multiplicative_expression>

<multiplicative_expression>:
  <postfix_expression>
  <multiplicative_expression> "*" <postfix_expression>
  <multiplicative_expression> "/" <postfix_expression>

<postfix_expression>:
  <primary_expression>
  <postfix_expression>"(" [<argument_expression_list>] ")"

<argument_expression_list>:
  <assignment_expression>
  <argument_expression_list> "," <assignment_expression>

<primary_expression>:
  <decimal-constant>
  <identifier>
  "(" <expression> ")"
